syntax = "proto3";

package proto;

option go_package = "origin/internal/network/proto";

// ============================================================================
// БАЗОВЫЕ ТИПЫ
// ============================================================================

// Позиция в мире
message Position {
  int32 x = 1;
  int32 y = 2;
  float heading = 3;
}

// Вектор направления/скорости
message Vector2 {
  int32 x = 1;
  int32 y = 2;
}

// AABB для коллизий
message AABB {
  int32 min_x = 1;
  int32 min_y = 2;
  int32 max_x = 3;
  int32 max_y = 4;
}

// Timestamp в Unix milliseconds
message Timestamp {
  int64 millis = 1;
}

// ============================================================================
// ENUMS
// ============================================================================

enum MovementMode {
  MOVE_MODE_WALK = 0;
  MOVE_MODE_RUN = 1;
  MOVE_MODE_FAST_RUN = 2;
  MOVE_MODE_SWIM = 3;
}

enum EquipSlot {
  EQUIP_SLOT_NONE = 0;
  EQUIP_SLOT_HEAD = 1;
  EQUIP_SLOT_CHEST = 2;
  EQUIP_SLOT_LEGS = 3;
  EQUIP_SLOT_FEET = 4;
  EQUIP_SLOT_HANDS = 5;
  EQUIP_SLOT_LEFT_HAND = 6;
  EQUIP_SLOT_RIGHT_HAND = 7;
  EQUIP_SLOT_BACK = 8;
  EQUIP_SLOT_NECK = 9;
  EQUIP_SLOT_RING_1 = 10;
  EQUIP_SLOT_RING_2 = 11;
}

enum ExpType {
  EXP_TYPE_NATURE = 0;
  EXP_TYPE_INDUSTRY = 1;
  EXP_TYPE_COMBAT = 2;
}

enum WeatherType {
  WEATHER_TYPE_CLEAR = 0;
  WEATHER_TYPE_RAIN = 1;
  WEATHER_TYPE_FOG = 2;
  WEATHER_TYPE_STORM = 3;
  WEATHER_TYPE_SNOW = 4;
}

enum InventoryKind {
  INVENTORY_KIND_GRID = 0;
  INVENTORY_KIND_HAND = 1;
  INVENTORY_KIND_EQUIPMENT = 2;
  INVENTORY_KIND_DROPPED_ITEM = 3;
}

enum ErrorCode {
  ERROR_CODE_NONE = 0;
  ERROR_CODE_INVALID_REQUEST = 1;
  ERROR_CODE_NOT_AUTHENTICATED = 2;
  ERROR_CODE_ENTITY_NOT_FOUND = 3;
  ERROR_CODE_OUT_OF_RANGE = 4;
  ERROR_CODE_INSUFFICIENT_RESOURCES = 5;
  ERROR_CODE_INVENTORY_FULL = 6;
  ERROR_CODE_CANNOT_INTERACT = 7;
  ERROR_CODE_COOLDOWN_ACTIVE = 8;
  ERROR_CODE_INSUFFICIENT_STAMINA = 9;
  ERROR_CODE_TARGET_INVALID = 10;
  ERROR_CODE_PATH_BLOCKED = 11;
  ERROR_CODE_TIMEOUT_EXCEEDED = 12;
  ERROR_CODE_BUILDING_INCOMPLETE = 13;
  ERROR_CODE_RECIPE_UNKNOWN = 14;
  ERROR_PACKET_PER_SECOND_LIMIT_THRESHOLDED = 15;
  ERROR_CODE_INTERNAL_ERROR = 16;
}

enum WarningCode {
  WARN_INPUT_QUEUE_OVERFLOW = 0;
}

enum CharacterAttributeKey {
  CHARACTER_ATTRIBUTE_KEY_UNSPECIFIED = 0;
  CHARACTER_ATTRIBUTE_KEY_INT = 1;
  CHARACTER_ATTRIBUTE_KEY_STR = 2;
  CHARACTER_ATTRIBUTE_KEY_PER = 3;
  CHARACTER_ATTRIBUTE_KEY_PSY = 4;
  CHARACTER_ATTRIBUTE_KEY_AGI = 5;
  CHARACTER_ATTRIBUTE_KEY_CON = 6;
  CHARACTER_ATTRIBUTE_KEY_CHA = 7;
  CHARACTER_ATTRIBUTE_KEY_DEX = 8;
  CHARACTER_ATTRIBUTE_KEY_WIL = 9;
}

// ============================================================================
// ITEM & INVENTORY
// ============================================================================

// Универсальная ссылка на контейнер/инвентарь.
message InventoryRef {
  InventoryKind kind = 1;
  uint64 owner_id = 2; // entity, которому принадлежит контейнер (player, chest, dropped entity). либо item_id если бросаем вещь
  uint32 inventory_key = 3; // если у entity может быть несколько grid-контейнеров (рюкзак/карман/сундук#N)
}

message ItemInstance {
  uint64 item_id = 1;
  uint32 type_id = 2; // ID типа предмета
  string resource = 3;
  uint32 quality = 4;
  uint32 quantity = 5;
  string name = 6;
  optional string hint_ext = 7;

  uint32 w = 10; // размеры в слотах
  uint32 h = 11;

  // Если предмет является контейнером (seed_bag, backpack, etc.),
  // nested_ref указывает на вложенный инвентарь (состояние приходит отдельно по запросу)
  optional InventoryRef nested_ref = 12;
}

message GridItem {
  uint32 x = 1; // top-left
  uint32 y = 2;
  ItemInstance item = 3;
}

message InventoryGridState {
  uint32 width = 1;
  uint32 height = 2;
  repeated GridItem items = 3;
}

message EquipmentItem {
  EquipSlot slot = 1;
  ItemInstance item = 2;
}

message InventoryEquipmentState {
  repeated EquipmentItem items = 1;
}

message InventoryHandState {
  ItemInstance item = 1;

  // Оффсет клика внутри предмета при взятии "в руку".
  // Нужен клиенту, чтобы рисовать предмет, привязанный к курсору:
  // item_top_left = mouse_pos - hand_pos
  // Единицы: UI-пиксели (координаты клиентского инвентарного UI).
  HandPos hand_pos = 2;
}

message InventoryState {
  InventoryRef ref = 1;
  uint64 revision = 2; // монотонная ревизия контейнера
  string title = 3; // caption for GRID windows; must be non-empty for GRID states
  oneof state {
    InventoryGridState grid = 10;
    InventoryEquipmentState equipment = 11;
    InventoryHandState hand = 12;
  }
}

message InventoryExpected {
  InventoryRef ref = 1;
  uint64 expected_revision = 2;
}

message GridPos {
  uint32 x = 1;
  uint32 y = 2;
}

message HandPos {
  int32 mouse_offset_x = 1;
  int32 mouse_offset_y = 2;
}

message InventoryMoveSpec {
  InventoryRef src = 1;
  InventoryRef dst = 2;

  uint64 item_id = 3;

  // Куда кладём в dst (актуально для GRID). Для HAND/EQUIP можно не задавать.
  optional GridPos dst_pos = 4;

  // Для EQUIPMENT: в какой слот хотим положить (если dst.kind == EQUIPMENT)
  optional EquipSlot dst_equip_slot = 5;

  // Для HAND: как взяли в руку (отступ от курсора мыши), показываем на клиенте
  optional HandPos hand_pos = 6;

  // Если предмет стэкуемый и в dst уже есть стак: сколько переносим (<= quantity)
  // Если не задано — переносим “как получится” по правилам сервера (обычно всё).
  optional uint32 quantity = 7;

  // Поведение при коллизии/занятости:
  // - если false: операция должна фейлиться
  // - если true: сервер может выполнить swap, merge stack, или другое определённое поведение
  bool allow_swap_or_merge = 8;
}

message InventoryOp {
  uint64 op_id = 1; // клиентский id для идемпотентности/повторной отправки

  // optimistic concurrency для максимум двух контейнеров
  repeated InventoryExpected expected = 2; // 1..2 entries

  oneof kind {
    InventoryMoveSpec move = 10;

    // Удобный шорткат: “выбросить из контейнера в мир (дроп)”
    // (фактически move src -> dropped + spawn entity)
    InventoryMoveSpec drop_to_world = 12;
  }
}

message C2S_InventoryOp {
  InventoryOp op = 1;
}

message C2S_OpenContainer {
  InventoryRef ref = 1;
}

message C2S_CloseContainer {
  InventoryRef ref = 1;
}

// ============================================================================
// ENTITY DATA
// ============================================================================

message EntityMovement {
  Position position = 1;
  Vector2 velocity = 2;
  MovementMode move_mode = 4;
  optional Vector2 target_position = 5; // куда движется, если есть
  bool is_moving = 6;
}

message EntityPosition {
  Position position = 1;
  Vector2 size = 2;
}

message EntityAppearance {
  string resource = 1;
  string name = 2;
}

// ============================================================================
// CHUNK & WORLD
// ============================================================================

message ChunkCoord {
  int32 x = 1;
  int32 y = 2;
}
message ChunkData {
  ChunkCoord coord = 1;
  bytes tiles = 2; // compressed 128x128 tiles (можно zlib)
  uint32 version = 3; // для инвалидации кэша
}

// ============================================================================
// ACTIONS
// ============================================================================

message MoveTo {
  int32 x = 1;
  int32 y = 2;
}

message MoveToEntity {
  uint64 entity_id = 1;
  bool auto_interact = 2; // автоматически взаимодействовать при достижении
}

message Interact {
  uint64 entity_id = 1;
  InteractionType type = 2; // optional, сервер сам определит если не указан
}

message SelectContextAction {
  uint64 entity_id = 1;
  string action_id = 2;
}

enum InteractionType {
  AUTO = 0; // сервер решает
  OPEN = 2;
  PICKUP = 5;
}

message C2S_PlayerAction {
  oneof action {
    MoveTo move_to = 1;
    MoveToEntity move_to_entity = 2;
    Interact interact = 3;
    SelectContextAction select_context_action = 4;
    //    Attack attack = 4;
    //    UseSkill use_skill = 5;
    //    StopAction stop = 6;
  }

  uint32 modifiers = 10; // bitflags: SHIFT=1, CTRL=2, ALT=4
}

// Движение - отдельный поток для responsive controls
message C2S_MovementMode {
  MovementMode mode = 1; // WALK, RUN, FAST_RUN, SWIM
}

// ============================================================================
// CHAT
// ============================================================================

enum ChatChannel {
  CHAT_CHANNEL_LOCAL = 0; // слышат все вокруг игрока (radius на сервере)
  CHAT_CHANNEL_GLOBAL = 1; // системный/глобальный (всем, либо особая логика)
  CHAT_CHANNEL_PRIVATE = 2; // 1 игрок -> 1 игрок
  CHAT_CHANNEL_PARTY = 3; // party chat
}

message C2S_ChatMessage {
  string text = 1;
  ChatChannel channel = 2;
  oneof target {
    uint64 private_entity_id = 3; // обязателен если channel == CHAT_CHANNEL_PRIVATE
  }
}

// ============================================================================
// CLIENT -> SERVER MESSAGES
// ============================================================================

message C2S_Auth {
  string token = 1;
  string client_version = 2;
}

message C2S_Ping {
  int64 client_time_ms = 1;
}

// Обёртка для всех клиентских сообщений
message ClientMessage {
  uint32 sequence = 1; // sequence number для ack
  oneof payload {
    C2S_Auth auth = 10;
    C2S_Ping ping = 11;
    C2S_PlayerAction player_action = 12;
    C2S_MovementMode movement_mode = 13;
    C2S_InventoryOp inventory_op = 14;
    C2S_ChatMessage chat = 15;
    C2S_OpenContainer open_container = 16;
    C2S_CloseContainer close_container = 17;
    //    C2S_StopMovement stop_movement = 13;
    //    C2S_Interact interact = 14;
    //    C2S_Attack attack = 15;
    //    C2S_UseItem use_item = 16;
    //    C2S_EquipItem equip_item = 17;
    //    C2S_UnequipItem unequip_item = 18;
    //    C2S_MoveItemInInventory move_item = 19;
    //    C2S_DropItem drop_item = 20;
    //    C2S_SplitStack split_stack = 21;
    //    C2S_PickupItem pickup_item = 22;
    //    C2S_TransferItem transfer_item = 23;
    //    C2S_Craft craft = 24;
    //    C2S_Build build = 25;
    //    C2S_PlaceItemInBuildSite place_in_build = 26;
    //    C2S_StartDragging start_dragging = 27;
    //    C2S_StopDragging stop_dragging = 28;
    //    C2S_RequestChunk request_chunk = 30;
  }
}


// ============================================================================
// SERVER -> CLIENT MESSAGES
// ============================================================================

message S2C_AuthResult {
  bool success = 1;
  string error_message = 2;
}

message S2C_Pong {
  int64 client_time_ms = 1;
  int64 server_time_ms = 2;
}

// when all is ready to player enter, than send chunks, entities, etc
message S2C_PlayerEnterWorld {
  uint64 entity_id = 1;
  string name = 2;
  uint32 coord_per_tile = 3;
  uint32 chunk_size = 4;
  uint32 tick_rate = 5;
  //  EntityStats stats = 4;
  //  EntitySkills skills = 5;
  //  Inventory inventory = 6;
  //  Paperdoll paperdoll = 7;
  //  optional uint64 dragging_entity_id = 8; // если тащим что-то
  uint32 stream_epoch = 9; // для защиты от гонок состояний
}

message CharacterAttributeEntry {
  CharacterAttributeKey key = 1;
  int32 value = 2;
}

message S2C_CharacterProfile {
  repeated CharacterAttributeEntry attributes = 1;
}

// on teleport, layer change - show loading screen on client, remove all chunks, entities
message S2C_PlayerLeaveWorld {
  uint64 entity_id = 1;
}

message S2C_ChunkLoad {
  ChunkData chunk = 1;
}

message S2C_ChunkUnload {
  ChunkCoord coord = 1;
}

message S2C_ObjectSpawn {
  uint64 entity_id = 1;
  uint32 type_id = 2; // defId from object definitions
  string resource_path = 3;
  EntityPosition position = 4;
}

message S2C_ObjectDespawn {
  uint64 entity_id = 1;
}

message S2C_ObjectMove {
  uint64 entity_id = 1;
  EntityMovement movement = 2;

  // server timestamp when this movement state was authored
  int64 server_time_ms = 3;
  // monotonically increasing per entity (wrap ok)
  uint32 move_seq = 4;

  // if true: client should snap/reset buffer
  bool is_teleport = 5;
}

message S2C_InventoryOpResult {
  uint64 op_id = 1;
  bool success = 2;
  ErrorCode error = 3;
  string message = 4;

  // Полные состояния контейнеров, которые изменились в этой операции (0..2).
  repeated InventoryState updated = 10;

  // Если операция породила/удалила dropped entity — сообщаем (доп. к обычным spawn/despawn).
  optional uint64 spawned_dropped_entity_id = 20;
  optional uint64 despawned_dropped_entity_id = 21;
}

message S2C_InventoryUpdate {
  repeated InventoryState updated = 1; // может быть 1..N, но на практике 1..2
}

message S2C_ContainerOpened {
  InventoryState state = 1; // полный снапшот
}

message S2C_ContainerClosed {
  InventoryRef ref = 1;
}

message ContextMenuAction {
  string action_id = 1;
  string title = 2;
}

message S2C_ContextMenu {
  uint64 entity_id = 1;
  repeated ContextMenuAction actions = 2;
}

enum AlertSeverity {
  ALERT_SEVERITY_INFO = 0;
  ALERT_SEVERITY_WARNING = 1;
  ALERT_SEVERITY_ERROR = 2;
}

message S2C_MiniAlert {
  AlertSeverity severity = 1;
  string reason_code = 2;
  uint32 ttl_ms = 3;
}

message S2C_CyclicActionProgress {
  string action_id = 1;
  uint64 target_entity_id = 2;
  uint32 cycle_index = 3;
  uint32 elapsed_ticks = 4;
  uint32 total_ticks = 5;
}

enum CyclicActionFinishResult {
  CYCLIC_ACTION_FINISH_RESULT_UNSPECIFIED = 0;
  CYCLIC_ACTION_FINISH_RESULT_COMPLETED = 1;
  CYCLIC_ACTION_FINISH_RESULT_CANCELED = 2;
}

message S2C_CyclicActionFinished {
  string action_id = 1;
  uint64 target_entity_id = 2;
  uint32 cycle_index = 3;
  CyclicActionFinishResult result = 4;
  optional string reason_code = 5; // set only for canceled result
}

message S2C_Sound {
  string sound_key = 1;
  double x = 2;
  double y = 3;
  double max_hear_distance = 4;
}

message S2C_ChatMessage {
  ChatChannel channel = 1;

  uint64 from_entity_id = 2;
  string from_name = 3;

  string text = 4;

  // для приватного чата: кому адресовано (полезно клиенту для UI/логов)
  optional uint64 to_entity_id = 5;
}

message S2C_Error {
  ErrorCode code = 1;
  string message = 2;
}

message S2C_Warning {
  WarningCode code = 1;
  string message = 2;
}

// Обёртка для всех серверных сообщений
message ServerMessage {
  uint32 sequence = 1; // для ack если нужно
  oneof payload {
    S2C_AuthResult auth_result = 10;
    S2C_Pong pong = 11;

    S2C_ChunkLoad chunk_load = 12;
    S2C_ChunkUnload chunk_unload = 13;

    S2C_PlayerEnterWorld player_enter_world = 14;
    S2C_PlayerLeaveWorld player_leave_world = 15;

    S2C_ObjectSpawn object_spawn = 16;
    S2C_ObjectDespawn object_despawn = 17;

    S2C_ObjectMove object_move = 18;

    S2C_InventoryOpResult inventory_op_result = 19;
    S2C_InventoryUpdate inventory_update = 20;

    S2C_ContainerOpened container_opened = 21;
    S2C_ContainerClosed container_closed = 22;

    S2C_ChatMessage chat = 23;
    S2C_ContextMenu context_menu = 44;
    S2C_MiniAlert mini_alert = 45;
    S2C_CyclicActionProgress cyclic_action_progress = 46;
    S2C_CyclicActionFinished cyclic_action_finished = 47;
    S2C_Sound sound = 48;
    S2C_CharacterProfile character_profile = 49;

    //    S2C_EntityUpdate entity_update = 15;
    //    S2C_PlayerStateUpdate player_state = 16;
    //    S2C_InventoryUpdate inventory_update = 17;
    //    S2C_ContainerOpen container_open = 19;
    //    S2C_ContainerClose container_close = 20;
    //    S2C_ContainerUpdate container_update = 21;
    //    S2C_ItemPickedUp item_picked = 22;
    //    S2C_ItemDropped item_dropped = 23;
    //    S2C_ExpGain exp_gain = 24;
    //    S2C_DamageDealt damage_dealt = 25;
    //    S2C_EntityDied entity_died = 26;
    //    S2C_ResourceGathered resource_gathered = 27;
    //    S2C_ResourceDepleted resource_depleted = 28;
    //    S2C_CraftStarted craft_started = 29;
    //    S2C_CraftCompleted craft_completed = 30;
    //    S2C_CraftFailed craft_failed = 31;
    //    S2C_BuildSiteCreated build_site_created = 32;
    //    S2C_BuildSiteUpdate build_site_update = 33;
    //    S2C_BuildingCompleted building_completed = 34;
    //    S2C_PlantGrowthUpdate plant_growth = 35;
    //    S2C_DragStarted drag_started = 36;
    //    S2C_DragStopped drag_stopped = 37;
    //    S2C_VisibilityChanged visibility_changed = 38;
    //    S2C_WorldStateUpdate world_state = 39;
    //    S2C_ChatMessage chat = 40;
    //    S2C_SystemMessage system_message = 41;
    S2C_Error error = 42;
    S2C_Warning warning = 43;
    //    S2C_Disconnect disconnect = 44;
    //    S2C_EventBatch event_batch = 45;
  }
}
